<resources>
    <string name="app_name">Ordering</string>
    <string name="app_title">ORDERING</string>
    <string name="cart">카트</string>
    <string name="order">주문 내역</string>
    <string name="loading">로딩</string>
    <string name="best">기획전</string>
    <string name="main">든든한 메인요리</string>
    <string name="soup">뜨끈한 국물요리</string>
    <string name="side">정갈한 밑반찬</string>
    <string name="cart_bottom_sheet_title">장바구니에 담기</string>
    <string name="bottom_sheet_cancel_button_text">취소</string>
    <string name="bottom_sheet_add_button">%d개 담기</string>
    <string name="discount_rate_format">%d%%</string>
    <string name="currency_format">%,d원</string>
    <string name="total_count_format">총 %,d개 상품</string>
    <string name="dialog_success_cart_add">선택한 상품이 장바구니에 담겼습니다.</string>
    <string name="dialog_success_is_exists_cart">선택한 상품이 장바구니에 이미 존재합니다.</string>
    <string name="dialog_keep_shopping">계속 쇼핑하기</string>
    <string name="dialog_check_cart">장바구니 확인</string>
    <string name="point">적립금</string>
    <string name="delivery_info">배송정보</string>
    <string name="delivary_fee">배송비</string>
    <string name="count">수량</string>
    <string name="cart_deselect_all">선택 해제</string>
    <string name="cart_select_all">전체 선택</string>
    <string name="cart_delete_selected_item">선택 삭제</string>
    <string name="cart_recently_header_title">최근 본 상품</string>
    <string name="cart_see_all">전체보기</string>
    <string name="sum_of_price">상품 주문 금액</string>
    <string name="delivery_fee">배송비</string>
    <string name="total_price">총 주문 금액</string>
    <string name="cart_order_button">%,d원 주문하기</string>
    <string name="cart_delivery_free_info">%,d원을 더 담으면 무료배송!</string>
    <string name="cart_check_minimum">10,000원부터 주문할 수 있어요</string>
    <string name="add_to_cart">주문하기</string>
    <string name="already_added_to_cart">이미 주문이 되어 있어요</string>
    <string name="simple_order_title">%s 외 %d개</string>
    <string name="order_reception">주문이 접수되었습니다.</string>
    <string name="order_delivering">배송 준비중</string>
    <string name="order_delivered">배송완료</string>
    <string name="delivery_success">배송이 완료되었습니다.</string>
    <string name="delivery_time_title">배송까지 남은 시간</string>
    <string name="delivery_time_format">%d분</string>
    <string name="product_count_format">총 %d개</string>
    <string name="product_count_title">주문한 상품</string>
    <string name="order_detail_count_format">%d개</string>
    <string name="empty_message">아무것도 없어요..</string>
    <string name="cart_channel_id">cart</string>
    <string name="cart_channel_name">장바구니</string>
    <string name="cart_notification_content">고객님께서 주문하신 %s이(가) 배달되었어요.</string>
    <string name="cart_notification_content_with_count">고객님께서 주문하신 %s 외 %d이(가) 배달되었어요.</string>
    <string name="main_header_best">한 번 주문하면\n두 번 반하는 반찬들</string>
    <string name="main_header_best_chip">기획전</string>
    <string name="main_header_main_dish">모두가 좋아하는\n든든한 메인 요리</string>
    <string name="main_header_soup">정성이 담긴\n뜨끈뜨끈 국물 요리</string>
    <string name="main_header_side">식탁을 풍성하게 하는\n정갈한 밑반찬</string>
    <string name="no_internet_message">네트워크가 연결되지 않았습니다.\nWi-Fi 또는 데이터를 활성화 해주세요.</string>
    <string name="no_internet_retry">다시 시도</string>
    <string name="error_message">오류가 발생했습니다.</string>
    <string name="no_item_message">아무것도 없어요!</string>
</resources>