<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="title"
            type="String" />

        <variable
            name="vm"
            type="com.woowahan.ordering.ui.viewmodel.DetailViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/space_horizontal"
        android:paddingVertical="@dimen/space_divide_vertical">

        <TextView
            android:id="@+id/tv_title"
            style="@style/Heading.Bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="marquee"
            android:lines="1"
            android:text="@{title}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="오리 주물럭_반조리" />

        <TextView
            android:id="@+id/tv_description"
            style="@style/Subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_text_vertical"
            android:text="@{vm.foodDetail.productDescription}"
            android:textColor="@color/gray_default"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title"
            tools:text="감칠맛 나는 매콤한 양념" />

        <TextView
            android:id="@+id/tv_discount_rate"
            style="@style/Subtitle.Bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_text_vertical"
            android:text="@{@string/discount_rate_format(vm.foodDetail.discountedRate)}"
            android:textColor="@color/primary_accent"
            android:visibility="@{vm.foodDetail.discountedRate == 0 ? View.GONE : View.VISIBLE, default=visible}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_description"
            tools:text="10%" />

        <TextView
            android:id="@+id/tv_discount_price"
            style="@style/Subtitle.Bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_text_horizontal"
            android:layout_marginTop="@dimen/space_text_vertical"
            android:text="@{@string/currency_format(vm.foodDetail.discountedPrice)}"
            app:layout_constraintStart_toEndOf="@id/tv_discount_rate"
            app:layout_constraintTop_toBottomOf="@id/tv_description"
            app:layout_goneMarginStart="0dp"
            tools:text="10,000원" />

        <TextView
            android:id="@+id/tv_original_price"
            style="@style/Body2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_text_horizontal"
            android:layout_marginTop="@dimen/space_text_vertical"
            android:text="@{@string/currency_format(vm.foodDetail.price)}"
            android:textColor="@color/gray_default"
            android:visibility="@{vm.foodDetail.price == 0 ? View.GONE : View.VISIBLE, default=visible}"
            app:layout_constraintBottom_toBottomOf="@id/tv_discount_price"
            app:layout_constraintStart_toEndOf="@id/tv_discount_price"
            app:layout_goneMarginStart="0dp"
            tools:text="10,000원" />

        <View
            android:id="@+id/v_divider"
            style="@style/Divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/space_divide_vertical"
            app:layout_constraintTop_toBottomOf="@id/tv_discount_price" />

        <TextView
            android:id="@+id/tv_title_point"
            style="@style/Body2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_divide_vertical"
            android:text="@string/point"
            android:textColor="@color/gray_default"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/v_divider" />

        <TextView
            android:id="@+id/tv_title_delivery_info"
            style="@style/Body2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_text_vertical"
            android:text="@string/delivery_info"
            android:textColor="@color/gray_default"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title_point" />

        <TextView
            android:id="@+id/tv_title_delivery_fee"
            style="@style/Body2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_text_vertical"
            android:text="@string/delivary_fee"
            android:textColor="@color/gray_default"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title_delivery_info" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="64dp" />

        <TextView
            android:id="@+id/tv_point"
            style="@style/Body2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{@string/currency_format(vm.foodDetail.point)}"
            android:textColor="@color/gray_default"
            app:layout_constraintStart_toEndOf="@id/gl_info"
            app:layout_constraintTop_toTopOf="@id/tv_title_point"
            tools:text="403원" />

        <TextView
            android:id="@+id/tv_delivery_info"
            style="@style/Body2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{vm.foodDetail.deliveryInfo}"
            android:textColor="@color/gray_default"
            app:layout_constraintStart_toEndOf="@id/gl_info"
            app:layout_constraintTop_toTopOf="@id/tv_title_delivery_info"
            tools:text="서울 경기 새벽 배송,  전국 택배 배송" />

        <TextView
            android:id="@+id/tv_delivery_fee"
            style="@style/Body2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{vm.foodDetail.deliveryFee}"
            android:textColor="@color/gray_default"
            app:layout_constraintStart_toEndOf="@id/gl_info"
            app:layout_constraintTop_toTopOf="@id/tv_title_delivery_fee"
            tools:text="2,500원 (40,000원 이상 구매 시 무료)" />

        <View
            android:id="@+id/v_divider_2"
            style="@style/Divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/space_divide_vertical"
            app:layout_constraintTop_toBottomOf="@id/tv_title_delivery_fee" />

        <TextView
            android:id="@+id/tv_title_count"
            style="@style/Body2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/count"
            android:textColor="@color/gray_default"
            app:layout_constraintBottom_toBottomOf="@+id/btn_minus"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/btn_minus" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btn_minus"
            style="@style/RoundedLargeButton"
            android:layout_width="@dimen/button_size"
            android:layout_height="@dimen/button_size"
            android:layout_marginHorizontal="@dimen/space_horizontal"
            android:onClick="@{() -> vm.decreaseCount()}"
            android:src="@drawable/ic_minus"
            app:layout_constraintBottom_toBottomOf="@id/btn_plus"
            app:layout_constraintEnd_toStartOf="@id/tv_count"
            app:layout_constraintTop_toTopOf="@id/btn_plus" />

        <TextView
            android:id="@+id/tv_count"
            style="@style/Subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/space_horizontal"
            android:text="@{Integer.toString(vm.count)}"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="@id/btn_plus"
            app:layout_constraintEnd_toStartOf="@id/btn_plus"
            app:layout_constraintTop_toTopOf="@id/btn_plus"
            tools:text="1" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btn_plus"
            style="@style/RoundedLargeButton"
            android:layout_width="@dimen/button_size"
            android:layout_height="@dimen/button_size"
            android:layout_marginHorizontal="@dimen/space_horizontal"
            android:onClick="@{() -> vm.increaseCount()}"
            android:src="@drawable/ic_plus"
            android:layout_marginTop="@dimen/space_divide_vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/v_divider_2" />

        <View
            android:id="@+id/v_divider_3"
            style="@style/Divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/space_divide_vertical"
            app:layout_constraintTop_toBottomOf="@id/btn_plus" />

        <TextView
            style="@style/Subtitle.Bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/space_divide_horizontal"
            android:text="총 주문금액"
            android:textColor="@color/gray_default"
            app:layout_constraintBottom_toBottomOf="@id/tv_total_price"
            app:layout_constraintEnd_toStartOf="@id/tv_total_price"
            app:layout_constraintTop_toTopOf="@id/tv_total_price" />

        <TextView
            android:id="@+id/tv_total_price"
            style="@style/Heading.Bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_divide_vertical"
            android:text="@{@string/currency_format(vm.foodDetail.discountedPrice * vm.count)}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/v_divider_3"
            tools:text="10,000원" />

        <Button
            android:id="@+id/btn_add_cart"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_divide_vertical"
            android:backgroundTint="@color/primary_main"
            android:letterSpacing="0"
            android:onClick="@{() -> vm.addToCart(title, vm.foodDetail)}"
            android:paddingHorizontal="@dimen/space_horizontal"
            android:paddingVertical="@dimen/space_vertical"
            android:text="@string/add_to_cart"
            android:textColor="@color/white"
            android:textSize="@dimen/size_subtitle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_total_price" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>